make row categorie cardview style

--- a/app/src/main/res/layout/categorie_row.xml
+++ b/app/src/main/res/layout/categorie_row.xml
@@ -1,55 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <com.pkmmte.view.CircularImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerVertical="true"
-        android:id="@+id/categorieImg"
-        android:src="@drawable/categorie_classiques"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="12dp"
-        app:border="true"
-        app:border_color="#EEEEEE"
-        app:border_width="2dp"
-        app:shadow="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <LinearLayout
+    android:layout_height="wrap_content">
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:layout_toRightOf="@id/categorieImg">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        card_view:cardCornerRadius="4dp">
 
-        <TextView
-            android:id="@+id/categorieTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="marquee"
-            android:lines="1"
-            android:paddingTop="10dp"
-            android:text="Naturally Flavored Fruit &amp; Herb Detox Water"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/categorieDesc"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:lines="2"
-            android:paddingBottom="10dp"
-            android:text="This tasty brew only takes ten minutes to prepare."
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </LinearLayout>
-</RelativeLayout>
+            android:orientation="vertical">
+
+            <com.pkmmte.view.CircularImageView
+                android:id="@+id/categorieImg"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="14dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/categorie_classiques"
+                app:border="true"
+                app:border_color="#EEEEEE"
+                app:border_width="2dp"
+                app:shadow="true" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_toRightOf="@id/categorieImg"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/categorieTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:lines="1"
+                    android:paddingTop="10dp"
+                    android:text="Naturally Flavored Fruit &amp; Herb Detox Water"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/categorieDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:lines="2"
+                    android:paddingBottom="10dp"
+                    android:text="This tasty brew only takes ten minutes to prepare."
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
