--- a/app/src/main/res/values-hdpi/dimen.xml
+++ b/app/src/main/res/values-hdpi/dimen.xml
@@ -3,4 +3,6 @@
     <dimen name="appbar_header_height">128dp</dimen>
     <dimen name="activity_margin_content">8dp</dimen>
     <dimen name="text_minuterie">30sp</dimen>
+    <dimen name="text_minuterie_total">15sp</dimen>
+    <dimen name="circle_progress_timer">200dp</dimen>
 </resources>
