--- a/app/src/main/res/layout/activity_minuteur.xml
+++ b/app/src/main/res/layout/activity_minuteur.xml
@@ -37,6 +37,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:ems="8"
+                android:minEms="8"
+                android:maxEms="8"
                 android:inputType="time"/>
 
             <TextView
